// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spinner > message > sets message for next frame 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[35m◐[39m  foo",
]
`;

exports[`spinner > start > renders frames at interval 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[35m◐[39m  ",
  "[999D",
  "[J",
  "[35m◓[39m  ",
  "[999D",
  "[J",
  "[35m◑[39m  ",
]
`;

exports[`spinner > start > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  foo",
]
`;

exports[`spinner > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m   [0s]",
]
`;

exports[`spinner > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[31m■[39m  
",
  "[?25h",
]
`;

exports[`spinner > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[31m▲[39m  
",
  "[?25h",
]
`;

exports[`spinner > stop > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  foo
",
  "[?25h",
]
`;

exports[`spinner > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  
",
  "[?25h",
]
`;
